# platform

./: CMakeLists.txt  README.md
include/: platform.hpp
sample/: main.cpp
src/: platform.cpp
